starting a cube with threejs

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -8,9 +8,10 @@
 }
 
 #banner h1 {
-    font-size: 60px;
+    font-size: 35px;
     line-height: 1;
     letter-spacing: -1px;
+    float: left;
 }
 
 .hero-unit {
